.covered fixed button+img

--- a/css/style.css
+++ b/css/style.css
@@ -36,20 +36,36 @@ p {
 
 .covered img {
     width: 100%;
+    margin-left: 6rem;
     object-fit: cover;
 }
 
+.covered span {
+    color: white;
+}
+
 .covered-img-wrapper {
-    display: grid;
-    grid-template-columns: 2;
+    display: flex;
     grid-auto-rows: auto;
 }
 
 .covered-img-wrapper a {
-    
-    padding: 8px 75px 8px 75px;
-    background-color: white;
+    position: absolute;
+    margin-top: 2.5rem;
+    padding: 12px 3rem 12px 3rem;
+    background-color: #FFFFFF;
+    text-decoration: none;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.1);
     border-radius: 100px;
+    font-family: "Fira Sans";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 12px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.8);
 }
 
 header nav{
